fix: removed double border style

--- a/components/PageButtons/src/index.css
+++ b/components/PageButtons/src/index.css
@@ -6,7 +6,6 @@
 }
 
 .denhaag-page-buttons__outline-dark-action {
-  border-style: solid;
   background-color: var(--denhaag-page-buttons-outline-dark-action-background-color);
   border: var(--denhaag-button-border-width) solid var(--denhaag-page-buttons-outline-dark-action-border-color);
   color: var(--denhaag-page-buttons-outline-dark-action-color);
